// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading renders in disabled state 1`] = `
<div
  class="styled__Wrapper-sc-1pom3vg-0 PSvRx"
  disabled=""
  size="16"
/>
`;

exports[`Loading renders with contrast color 1`] = `
<div
  class="styled__Wrapper-sc-1pom3vg-0 hNvEqb"
  size="16"
/>
`;

exports[`Loading renders with custom size 1`] = `
<div
  class="styled__Wrapper-sc-1pom3vg-0 fRtoGJ"
  size="32"
/>
`;

exports[`Loading renders with default props 1`] = `
<div
  class="styled__Wrapper-sc-1pom3vg-0 gAabnp"
  size="16"
/>
`;

exports[`Loading renders with multiple custom props 1`] = `
<div
  class="styled__Wrapper-sc-1pom3vg-0 gZJleH"
  disabled=""
  size="40"
/>
`;

exports[`Loading renders with secondary color 1`] = `
<div
  class="styled__Wrapper-sc-1pom3vg-0 cgtggP"
  size="16"
/>
`;
